WiP Refactor the editor layout to use CSS z-index for managing the background, editor, and media view   layers, which fixes the background visibility bug by replacing the complex and unreliable   event-based system. Simplify the base UI element's event handling to use standard browser APIs and   remove the now-obsolete JavaScript logic for managing layout. Add IDs to the media views to allow   for more specific styling and adjust their CSS to ensure the resize handle is always accessible.

--- a/code-pwa/css/main.css
+++ b/code-pwa/css/main.css
@@ -191,6 +191,11 @@ ui-menu::-webkit-scrollbar-thumb,
 
 .ace_editor {
 	top: calc( var(--menuHeight) + 6px);
+    bottom: 0px;
+    right: 4px;
+    left: 0px;
+    z-index:1;
+    position: absolute;
 }
 
 #leftHolder.loading {
@@ -597,6 +602,20 @@ ui-tabbar.show-split-view-indicator::after {
     align-items: center;
     text-align: center;
     overflow: hidden;
+}
+
+#leftMedia,
+#rightMedia {
+	top: var(--tabHeight);
+    left:0px;
+    right:4px;
+    bottom:0px;
+}
+
+#leftMedia,
+#rightMedia,
+.ace_editor {
+    z-index: 1;
 }
 
 .background-element img {
